# stac-fastapi-pgstac-pair-search

./: .env  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-image.yml  cleanup-ghcr.yml  python-package.yml  python-publish.yml
pgstac-pair-search/: Dockerfile
scripts/: ingest_test_data.py
src/stac_fastapi_pgstac_pair_search/: app.py  client.py  models.py
src/stac_fastapi_pgstac_pair_search/extensions/: pair_search.py
src/stac_fastapi_pgstac_pair_search/sql/: first-only.sql  n_diff.sql  pair.sql  pair_search.sql  pair_search_alt.sql  s_raoverlap.sql  second-only.sql  t_diff.sql  t_end.sql  t_end_timerange.sql  t_end_timestamp.sql  t_start.sql  t_start_timerange.sql  t_start_timestamp.sql
tests/: conftest.py  requirements.txt  test_app.py  test_model.py  test_queries.py
tests/testdata/: control_00.json  control_01.json  control_02.json  control_03.json  control_04.json  control_05.json  control_06.json  control_07.json
tests/testdata/ENVISAT.ASA.IMS_1P/: collection.json  queryables.json
tests/testdata/ENVISAT.ASA.IMS_1P/items/: ASA_IMS_1PNESA20100406_094117_000000152088_00208_42346_0000.json  ASA_IMS_1PNESA20100511_094115_000000152089_00208_42847_0000.json  ASA_IMS_1PNESA20100511_205933_000000152089_00215_42854_0000.json  ASA_IMS_1PNESA20100517_211101_000000152089_00301_42940_0000.json  ASA_IMS_1PNESA20100602_094953_000000152090_00022_43162_0000.json  ASA_IMS_1PNESA20100704_094400_000000152090_00480_43620_0000.json  ASA_IMS_1PNESA20100704_210225_000000152090_00487_43627_0000.json  (+3 more)
