[project]
name = "stac-fastapi-pgstac-pair-search"
version = "2025.9.0"
description = "pair-search extension of stac-fastapi-pgstac"
readme = "README.md"
authors = [
    { name = "Petr Sevcik", email = "petr.sevcik@eox.at" },
    { name = "Joachim Ungar", email = "joachim.ungar@eox.at" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "cql2>=4.0.0",
    "stac-fastapi-pgstac>=6.0.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pypgstac[pgsql,psycopg]>=0.9.8",
    "pystac-client>=0.9.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "ruff>=0.12.12",
    "tqdm>=4.67.1",
]
